# Prefix_tree_filter

./: CMakeLists.txt  README.md
src/: filters.txt  filters_100.txt  filters_10k.txt  main.cpp  result.txt
src/filter/: data.h  filter.cpp  filter.h  packet.h
src/packet_filter_app/: packet_filter_app.cpp  packet_filter_app.h
src/tree/: prefix_tree.cpp  prefix_tree.h  prefix_tree_node.cpp  prefix_tree_node.h  range.cpp  range.h  tree_operations.cpp  tree_operations.h
src/utils/: utils.cpp  utils.h
